Get InfoPanel pretty. Move styles to less

--- a/index.less
+++ b/index.less
@@ -1,3 +1,7 @@
+@white: #fff;
+@yellow: #ffbf00;
+@gray: #d9d9d9;
+
 .logo {
     width: 120px;
     height: 31px;
@@ -10,4 +14,42 @@
     h5 {
         padding: 7px 0 0 10px;
     }
+}
+
+.appMenu {
+    line-height: 64px;
+}
+
+.appContent {
+    padding: 20px 50px 0 50px;
+}
+
+.appLayout {
+    padding: 24px 0;
+}
+
+.whiteBg {
+    background: @white;
+}
+
+.contentSelectPanel {
+    padding: 0 24px;
+    min-height: 280px;
+}
+
+.center {
+    text-align: center;
+}
+
+.heroIcon {
+    padding-right: 5px;
+}
+
+.infoPanel {
+    font-size: 15px;
+    line-height: 30px;
+}
+
+.heroLevel {
+
 }
