Move ItemsList to antd components

--- a/index.less
+++ b/index.less
@@ -1,6 +1,7 @@
 @white: #fff;
 @yellow: #ffbf00;
 @gray: #d9d9d9;
+@darkGray: #333;
 
 .logo {
     width: 120px;
@@ -53,4 +54,16 @@
 .leftPanel {
     border-right: 1px solid @gray;
     padding-right: 24px;
+}
+
+.inventoryItem {
+    border-bottom: 1px dotted @darkGray;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.divider {
+    border-bottom: 1px solid @gray;
+    margin: 10px 0;
 }
