Add icons for all quest types

--- a/components/Icon/icon.less
+++ b/components/Icon/icon.less
@@ -55,3 +55,6 @@
 
 .icon-mouse:before { content: '\6d'; } /* 'm' */
 .icon-thief:before { content: '\74'; } /* 't' */
+.icon-book-cover:before { content: '\e802'; } /* '' */
+.icon-wolf-head:before { content: '\e803'; } /* '' */
+.icon-farmer:before { content: '\e804'; } /* '' */
