Use nice Timeline component for battle log

--- a/components/Fight/fight.less
+++ b/components/Fight/fight.less
@@ -1,3 +1,12 @@
+.fightResult {
+    font-size: 16px;
+    padding-bottom: 20px;
+}
+
+.chronicleTitle {
+    padding-bottom: 20px;
+}
+
 .fightGreenLabel {
     color: green;
 }
