--- a/components/Fight/fight.less
+++ b/components/Fight/fight.less
@@ -14,3 +14,11 @@
 .fightRedLabel {
     color: red;
 }
+
+.fightRow {
+    margin-left: -8px;
+    margin-right: -8px;
+}
+.fightCol {
+    padding: 0 8px;
+}
