--- a/components/Fight/fight.less
+++ b/components/Fight/fight.less
@@ -22,3 +22,19 @@
 .fightCol {
     padding: 0 8px;
 }
+
+.fightLogMessage {
+    color: brown;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.fightLogDamage {
+    color: red;
+    font-weight: bold;
+}
+
+.fightLogHeroName {
+    font-size: 14px;
+    font-weight: bold;
+}
