It's time to refactoring

--- a/index.less
+++ b/index.less
@@ -11,10 +11,10 @@
     margin: 16px 28px 16px 0;
     float: left;
     color: #eee;
+}
 
-    h5 {
-        padding: 7px 0 0 10px;
-    }
+.logoTitle {
+    margin: -12px 0 0 20px;
 }
 
 .appMenu {
