Styling narrative element, add svg-icon for them

--- a/index.less
+++ b/index.less
@@ -71,3 +71,19 @@
 .heroMainPanel {
     padding-left: 24px;
 }
+
+.narrDescText {
+    font-style: italic;
+    font-weight: bold;
+}
+
+.narrDescBlock {
+    p {
+        line-height: 25px;
+        padding-bottom: 15px;
+
+        &:last-of-type {
+            padding-bottom: 0;
+        }
+    }
+}
