Fix for issue #4

--- a/index.less
+++ b/index.less
@@ -4,87 +4,91 @@
 @darkGray: #333;
 
 .logo {
-    width: 120px;
-    height: 31px;
-    background: #333;
-    border-radius: 6px;
-    margin: 16px 28px 16px 0;
-    float: left;
-    color: #eee;
+  width: 120px;
+  height: 31px;
+  background: #333;
+  border-radius: 6px;
+  margin: 16px 28px 16px 0;
+  float: left;
+  color: #eee;
 }
 
 .logoTitle {
-    font-size: 14px;
-    margin: -17px 0 0 12px;
+  font-size: 14px;
+  margin: -17px 0 0 12px;
 }
 
 .appMenu {
-    line-height: 64px;
+  line-height: 64px;
 }
 
 .appContent {
-    padding: 20px 50px 0 50px;
+  padding: 20px 50px 0 50px;
 }
 
 .appLayout {
-    padding: 24px 0;
+  padding: 24px 0;
 }
 
 .whiteBg {
-    background: @white;
+  background: @white;
 }
 
 .contentSelectPanel {
-    padding: 0 24px;
-    min-height: 280px;
+  padding: 0 24px;
+  min-height: 280px;
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
 
 .heroIcon {
-    padding-right: 5px;
+  padding-right: 5px;
 }
 
 .infoPanel {
-    font-size: 15px;
-    line-height: 30px;
+  font-size: 15px;
+  line-height: 30px;
 }
 
 .leftPanel {
-    border-right: 1px solid @gray;
-    padding-right: 24px;
+  border-right: 1px solid @gray;
+  padding-right: 24px;
 }
 
 .inventoryItem {
-    border-bottom: 1px dotted @darkGray;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
+  border-bottom: 1px dotted @darkGray;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .divider {
-    border-bottom: 1px solid @gray;
-    margin: 10px 0;
+  border-bottom: 1px solid @gray;
+  margin: 10px 0;
 }
 
 .heroMainPanel {
-    padding-left: 24px;
+  padding-left: 24px;
 }
 
 .narrDescText {
-    font-style: italic;
-    font-weight: bold;
+  font-style: italic;
+  font-weight: bold;
 }
 
 .narrDescBlock {
-    p {
-        line-height: 25px;
-        padding-bottom: 15px;
+  p {
+    line-height: 25px;
+    padding-bottom: 15px;
 
-        &:last-of-type {
-            padding-bottom: 0;
-        }
+    &:last-of-type {
+      padding-bottom: 0;
     }
+  }
+}
+
+.battleWrapper {
+  pointer-events: none;
 }
